[package]
name = "ai-valuation"
version = "0.1.0"
authors = ["PropChain Team"]
edition = "2021"

# Standalone package — not part of the parent workspace.
[workspace]

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[lib]
name = "ai_valuation"
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []