[package]
name = "stellar-insured-lib"
version = "1.0.0"
authors = ["Stellar Insured Team"]
edition = "2021"
description = "Shared library for Stellar Insured smart contracts"
license = "MIT"
publish = false

[dependencies]
soroban-sdk = "20.0.0"

[lib]
name = "stellar_insured_lib"
path = "src/lib.rs"
crate-type = ["rlib"]